--- a/src/app/map/create/create.html
+++ b/src/app/map/create/create.html
@@ -1,2 +1,3 @@
-
-<map-form data="createMap.data" on-submit="createMap.submit(data)" ></map-form>
+<div class="container" >
+    <map-form data="createMap.data" on-submit="createMap.submit(data)" ></map-form>
+</div>
