--- a/src/app/map/shared/mapForm.html
+++ b/src/app/map/shared/mapForm.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <label for="name" class="col-sm-3 control-label">Name</label>
         <div class="col-sm-9">
-            <input type="text" name="name" class="form-control" ng-model="model.name" />
+            <input type="text" name="name" class="form-control input-medium" ng-model="model.name" />
         </div>
     </div>
 
