--- a/src/components/mainMenu/mainMenu.html
+++ b/src/components/mainMenu/mainMenu.html
@@ -8,8 +8,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Maps</a></li>
-        <li><a ng-href="#">About</a></li>
+        <li class="active"><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="about" >About</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
 
