--- a/src/app/map/shared/mapForm.html
+++ b/src/app/map/shared/mapForm.html
@@ -1,36 +1,48 @@
-<form class="form-horizontal" novalidate ng-submit="submit()">
+
+<form name="mapForm" class="form-horizontal" novalidate ng-submit="mapForm.$valid && submit()">
+    {{ mapForm.$error }}
     <div class="form-group">
         <label for="name" class="col-sm-3 control-label">Name</label>
         <div class="col-sm-9">
-            <input type="text" name="name" class="form-control input-medium" ng-model="model.name" />
+            <input type="text"
+                name="name"
+                class="form-control input-medium" 
+                ng-model="model.name" 
+                required 
+                maxlength="100" />
         </div>
     </div>
 
     <div class="form-group">
         <label for="url" class="col-sm-3 control-label">Map image URL</label>
         <div class="col-sm-9">
-            <input type="text" name="url" class="form-control" ng-model="model.imageUrl" />
+            <input type="url" 
+                   name="url" 
+                   class="form-control" 
+                   ng-model="model.imageUrl" 
+                   required  
+                   maxlength="300" />
         </div>
     </div>
 
     <div class="form-group">
         <label for="description" class="col-sm-3 control-label">Description</label>
         <div class="col-sm-9">
-            <textarea name="description" class="form-control" ng-model="model.description" />
+            <textarea name="description" class="form-control" ng-model="model.description" required maxlength="500" />
         </div>
     </div>
 
     <div class="form-group">
         <label for="password" class="col-sm-3 control-label">Edition password</label>
         <div class="col-sm-9">
-            <input type="password" name="password" class="form-control" ng-model="model.password" />
+            <input type="password" name="password" class="form-control" ng-model="model.password" required maxlength="20" />
         </div>
     </div>
 
     <div class="form-group">
         <label for="repeatPassword" class="col-sm-3 control-label">Repeat password</label>
         <div class="col-sm-9">
-            <input type="password" name="repeatPassword" class="form-control" ng-model="model.repeatPassword" />
+            <input type="password" name="repeatPassword" class="form-control" ng-model="model.repeatPassword" required maxlength="20" />
         </div>
     </div>
 
