--- a/src/app/map/display/display.html
+++ b/src/app/map/display/display.html
@@ -1,5 +1,10 @@
 <div class="container-fluid" >
     <div class="row">
+        <div class="col-sm-9">
+            <h3>{{ displayMap.map.name }}</h3>
+        </div>
+    </div>
+    <div class="row">
 
         <div class="col-sm-9">
 
